Fixed alignment issues with ul's, ol's in callout boxes

--- a/versions/v3/static/scss/_views-story.scss
+++ b/versions/v3/static/scss/_views-story.scss
@@ -39,6 +39,7 @@ article.story {
   ol,
   ul {
     line-height: 1.2;
+    list-style-position: inside;
     margin-bottom: 20px;
   }
 
